Update MapMain.java